Retrieve source name from $activity->source_name allowing for modification by extending plugins

--- a/partials/field.source_user.htm
+++ b/partials/field.source_user.htm
@@ -1,1 +1,1 @@
-<span class="form-control"><?= e($model->source->first_name . ' ' . $model->source->last_name); ?></span>
+<span class="form-control"><?= e($model->source_name); ?></span>
