Added SystemActivities dashboard widget

--- a/reportwidgets/systemactivities/partials/_widget.htm
+++ b/reportwidgets/systemactivities/partials/_widget.htm
@@ -2,9 +2,10 @@
     <h3><?= $title; ?></h3>
 
     <div class="table-container control-list list-scrollable">
-        <table name="ListMyActivities" class="table data">
+        <table name="ListSystemActivities" class="table data">
             <thead>
                 <tr>
+                    <th><span><?= e(trans('luketowers.easyaudit::lang.models.activity.source')); ?></span></th>
                     <th><span><?= e(trans('luketowers.easyaudit::lang.models.activity.event')); ?></span></th>
                     <th><span><?= e(trans('luketowers.easyaudit::lang.models.activity.subject')); ?></span></th>
                     <th><span><?= e(trans('luketowers.easyaudit::lang.models.activity.created_at')); ?></span></th>
@@ -15,13 +16,14 @@
                     <?php $backendHelper = new \Backend\Helpers\Backend(); ?>
                     <?php foreach ($records as $record) : ?>
                         <tr class="rowlink" onclick="$.oc.activityController.clickActivityRecord(<?= $record->id; ?>, null, '<?= $this->getEventHandler('onViewLogItemDetails'); ?>')">
+                            <td><?= $record->source_name; ?></td>
                             <td><?= $record->event; ?></td>
                             <td><?= $record->subject_name; ?></td>
                             <td><?= $backendHelper->dateTime($record->created_at); ?></td>
                         </tr>
                     <?php endforeach; ?>
                 <?php else : ?>
-                    <tr><td colspan="100%"><?= e(trans('luketowers.easyaudit::lang.widgets.myactivities.no_records')); ?></td></tr>
+                    <tr><td colspan="100%"><?= e(trans('luketowers.easyaudit::lang.widgets.systemactivities.no_records')); ?></td></tr>
                 <?php endif; ?>
             </tbody>
         </table>
