Improved support for embedding the ActivityLog widget in various contexts & improved filtering performance on the system audit log view

--- a/reportwidgets/systemactivities/partials/_widget.htm
+++ b/reportwidgets/systemactivities/partials/_widget.htm
@@ -15,7 +15,7 @@
                 <?php if (count($records)) : ?>
                     <?php $backendHelper = new \Backend\Helpers\Backend(); ?>
                     <?php foreach ($records as $record) : ?>
-                        <tr class="rowlink" onclick="$.oc.activityController.clickActivityRecord(<?= $record->id; ?>, null, '<?= $this->getEventHandler('onViewLogItemDetails'); ?>')">
+                        <tr class="rowlink" onclick="$.oc.activityController.clickActivityRecord(<?= $record->id; ?>, this, '<?= $this->getEventHandler('onViewLogItemDetails'); ?>')">
                             <td><?= $record->source_name; ?></td>
                             <td><?= $record->event; ?></td>
                             <td><?= $record->subject_name; ?></td>
